# FTAAS

./: .gitignore  Dockerfile  Dockerfile.gpu  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-gpu.txt  requirements.txt
configs/: settings.yaml
docs/: architecture.md  deploy.md  gpu-training.md  testing.md
examples/: e2e_finetune.py
examples/data/: alpaca_sample.jsonl
orchestrator/airflow/dags/: ftaas_finetune_dag.py
orchestrator/local_runner/: runner.py
runner/airflow/dags/: ftaas_finetune_dag.py
runner/local/: runner.py
scripts/: deploy_railway.sh  e2e_smoke.sh  run_tests.sh  start_all.sh  start_trainer_worker.sh  stop_all.sh
services/aimlopsserv/: main.py
services/control/: main.py
services/datasets/: main.py
services/deploy/: main.py
services/ftaas_app/: __init__.py  main.py
services/jobs/: main.py
services/mdlc_server/: main.py
services/mds/: main.py
services/pipelines/: main.py
services/pipelineserv/: main.py
services/registry/: main.py
services/serving/: main.py
services/trainer_worker/: __init__.py  main.py
services/workflow/: main.py
tests/: conftest.py
tests/integration/: test_api_gateway.py  test_system_finetune.py
tests/unit/: test_config_and_train.py  test_device_qlora.py  test_registry_helpers.py
training/: device.py
training/frameworks/: registry.py
training/ray_jobs/: cluster.py
training/remote/: __init__.py  client.py
training/templates/: full_16bit.yaml  peft_lora_sft.yaml  trl_dpo.yaml
ui/console/: app.py
ui/console/static/: console.js  styles.css
ui/console/templates/: index.html
ui/cosmos_ui/: app.py
ui/cosmos_ui/static/: styles.css
ui/cosmos_ui/templates/: index.html
ui/web/: app.py
ui/web/templates/: index.html
