[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ftaas"
version = "0.1.0"
description = "Fine Tuning as a Service — register → train → track → deploy"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "Ashish Verma" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "httpx>=0.27.0",
  "sqlalchemy>=2.0.36",
  "aiosqlite>=0.20.0",
  "python-multipart>=0.0.12",
  "jinja2>=3.1.4",
  "aiofiles>=24.1.0",
  "mlflow>=2.17.0",
  "pyyaml>=6.0.2",
  "rich>=13.9.0",
  "typer>=0.12.0",
  "tenacity>=9.0.0",
]

[project.optional-dependencies]
train = [
  "transformers>=4.46.0",
  "datasets>=3.0.0",
  "peft>=0.13.0",
  "accelerate>=1.0.0",
  "trl>=0.12.0",
  "torch>=2.4.0",
]
ray = ["ray[default]>=2.37.0"]
all = ["ftaas[train,ray]"]

[project.scripts]
ftaas = "ftaas.cli:app"

[tool.setuptools.packages.find]
where = ["packages", "services", "training", "runner", "."]
include = ["ftaas*", "control*", "workflow*", "registry*", "deploy*", "ftaas_app*", "training*", "runner*", "scripts*", "ui*"]

[tool.setuptools.package-dir]
ftaas = "packages/ftaas_sdk/ftaas"
control = "services/control"
workflow = "services/workflow"
registry = "services/registry"
deploy = "services/deploy"
ftaas_app = "services/ftaas_app"
