[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ftaas"
version = "0.1.0"
description = "Fine Tuning as a Service — Python SDK (register → train → track → deploy)"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "Ashish Verma", email = "ashishodu2023@users.noreply.github.com" }]
keywords = [
  "ftaas",
  "fine-tuning",
  "llm",
  "lora",
  "mlflow",
  "ray",
  "peft",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "pyyaml>=6.0.2",
  "rich>=13.9.0",
  "typer>=0.12.0",
  "tenacity>=9.0.0",
]

[project.optional-dependencies]
server = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlalchemy>=2.0.36",
  "aiosqlite>=0.20.0",
  "greenlet>=3.0.0",
  "python-multipart>=0.0.12",
  "jinja2>=3.1.4",
  "aiofiles>=24.1.0",
  "mlflow>=2.17.0",
]
train = [
  "transformers>=4.46.0",
  "datasets>=3.0.0",
  "peft>=0.13.0",
  "accelerate>=1.0.0",
  "trl>=0.12.0",
  "torch>=2.4.0",
]
ray = ["ray[default]>=2.37.0"]
all = ["ftaas[server,train,ray]"]

[project.urls]
Homepage = "https://github.com/ashishodu2023/FTAAS"
Repository = "https://github.com/ashishodu2023/FTAAS"
Issues = "https://github.com/ashishodu2023/FTAAS/issues"
Documentation = "https://github.com/ashishodu2023/FTAAS#readme"

[project.scripts]
ftaas = "ftaas.cli:main"

[tool.setuptools.packages.find]
where = ["packages/ftaas_sdk"]
include = ["ftaas*"]

[tool.setuptools.package-data]
ftaas = ["py.typed"]
